Fix overflow nav

--- a/frontend/src/css/nav/BurgerMenu/BurgerMenu.module.css
+++ b/frontend/src/css/nav/BurgerMenu/BurgerMenu.module.css
@@ -14,7 +14,9 @@
   font-size: 18px;
   font-weight: 600;
   display: block;
-  padding: 27px 100%;
+  width: 100%;
+  padding: 27px 0;
+  text-align: center;
 }
 .burger_menu__items li:hover {
   background-color: #DE341D;
